src/ast/ExprParser.java
// Generated from E:\Tsmart Projects\ParseBIP\resource\Expr.g4 by ANTLR 4.1
package ast;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9,
		T__3=10, T__2=11, T__1=12, T__0=13, CT_INT=14, CT_CHAR=15, CT_FLOAT=16,
		CT_DOUBLE=17, TRUE=18, FALSE=19, EXTERN=20, EXPORT=21, DEFINE=22, PACKAGE=23,
		END=24, DOT=25, USE=26, AS=27, SEMICOL=28, ATOM=29, COMPOUND=30, COMPONENT=31,
		ON=32, INTERNAL=33, DO=34, PROVIDED=35, INITIAL=36, PLACE=37, FROM=38,
		TO=39, PRIORITY=40, CONNECTOR=41, UP_ACTION=42, DOWN_ACTION=43, PORT=44,
		TYPE=45, LPAREN=46, RPAREN=47, COMMA=48, QUOTE=49, IF=50, THEN=51, ELSE=52,
		FI=53, ID=54, INT=55, FLOAT=56, COMMENT=57, WS=58, STRING=59, LT_OP=60,
		GT_OP=61, LE_OP=62, GE_OP=63, EQ_OP=64, NE_OP=65, AND_OP=66, OR_OP=67;
	public static final String[] tokenNames = {
		"<INVALID>", "'%'", "'&'", "'^'", "'+'", "'-'", "'*'", "'='", "'{'", "'/'",
		"'~'", "'}'", "'|'", "'!'", "'int'", "'char'", "'float'", "'double'",
		"'true'", "'false'", "'extern'", "'export'", "'define'", "'package'",
		"'end'", "'.'", "'use'", "'as'", "';'", "'atom'", "'compound'", "'component'",
		"'on'", "'internal'", "'do'", "'provided'", "'initial'", "'place'", "'from'",
		"'to'", "'priority'", "'connector'", "'up'", "'down'", "'port'", "'type'",
		"'('", "')'", "','", "'''", "'if'", "'then'", "'else'", "'fi'", "ID",
		"INT", "FLOAT", "COMMENT", "WS", "STRING", "'<'", "'>'", "'<='", "'>='",
		"'=='", "'!='", "'&&'", "'||'"
	};
	public static final int
		RULE_do_action = 0, RULE_primary_expression = 1, RULE_statement = 2, RULE_if_then_else_expression = 3,
		RULE_if_then_else_expression_compatible = 4, RULE_assignment_expression = 5,
		RULE_logical_or_expression = 6, RULE_logical_and_expression = 7, RULE_inclusive_or_expression = 8,
		RULE_exclusive_or_expression = 9, RULE_and_expression = 10, RULE_equality_expression = 11,
		RULE_relational_expression = 12, RULE_additive_expression = 13, RULE_subtractive_expression = 14,
		RULE_multiplicative_expression = 15, RULE_unary_expression = 16, RULE_postfix_expression = 17,
		RULE_argument_expression_list = 18;
	public static final String[] ruleNames = {
		"do_action", "primary_expression", "statement", "if_then_else_expression",
		"if_then_else_expression_compatible", "assignment_expression", "logical_or_expression",
		"logical_and_expression", "inclusive_or_expression", "exclusive_or_expression",
		"and_expression", "equality_expression", "relational_expression", "additive_expression",
		"subtractive_expression", "multiplicative_expression", "unary_expression",
		"postfix_expression", "argument_expression_list"
	};

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Do_actionContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Do_actionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterDo_action(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitDo_action(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitDo_action(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_actionContext do_action() throws Exception {
		Do_actionContext _localctx = new Do_actionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_do_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 10) | (1L << 13) | (1L << TRUE) | (1L << FALSE) | (1L << SEMICOL) | (1L << LPAREN) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0)) {
				{
				{
				setState(38); statement();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primary_expressionContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public Token ID;
		public Token INT;
		public Token STRING;
		public TerminalNode TRUE() { return getToken(ExprParser.TRUE, 0); }
		public TerminalNode INT() { return getToken(ExprParser.INT, 0); }
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode STRING() { return getToken(ExprParser.STRING, 0); }
		public TerminalNode FALSE() { return getToken(ExprParser.FALSE, 0); }
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPrimary_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPrimary_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitPrimary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_expressionContext primary_expression() throws Exception {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primary_expression);
		try {
			setState(58);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(44); ((Primary_expressionContext)_localctx).ID = match(ID);
				((Primary_expressionContext)_localctx).tag = "Identifier"; ((Primary_expressionContext)_localctx).value =  (((Primary_expressionContext)_localctx).ID!=null?((Primary_expressionContext)_localctx).ID.getText():null);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(46); ((Primary_expressionContext)_localctx).INT = match(INT);
				((Primary_expressionContext)_localctx).tag = "Integer"; ((Primary_expressionContext)_localctx).value = Integer.parseInt((((Primary_expressionContext)_localctx).INT!=null?((Primary_expressionContext)_localctx).INT.getText():null));
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(48); ((Primary_expressionContext)_localctx).STRING = match(STRING);
				((Primary_expressionContext)_localctx).tag = "String"; ((Primary_expressionContext)_localctx).value = (((Primary_expressionContext)_localctx).STRING!=null?((Primary_expressionContext)_localctx).STRING.getText():null);
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 4);
				{
				setState(50); match(TRUE);
				((Primary_expressionContext)_localctx).tag = "Boolean"; ((Primary_expressionContext)_localctx).value = true;
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 5);
				{
				setState(52); match(FALSE);
				((Primary_expressionContext)_localctx).tag = "Boolean"; ((Primary_expressionContext)_localctx).value = false;
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 6);
				{
				setState(54); match(LPAREN);
				setState(55); logical_or_expression();
				setState(56); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public TerminalNode SEMICOL() { return getToken(ExprParser.SEMICOL, 0); }
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public If_then_else_expressionContext if_then_else_expression() {
			return getRuleContext(If_then_else_expressionContext.class,0);
		}
		public If_then_else_expression_compatibleContext if_then_else_expression_compatible() {
			return getRuleContext(If_then_else_expression_compatibleContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws Exception {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(69);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60); assignment_expression();
				setState(61); match(SEMICOL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63); logical_or_expression();
				setState(64); match(SEMICOL);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66); if_then_else_expression();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67); if_then_else_expression_compatible();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(68); match(SEMICOL);
				}
				break;
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_then_else_expressionContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public StatementContext statement;
		public List<StatementContext> then_stmts = new ArrayList<StatementContext>();
		public List<StatementContext> else_stmts = new ArrayList<StatementContext>();
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode THEN() { return getToken(ExprParser.THEN, 0); }
		public TerminalNode IF() { return getToken(ExprParser.IF, 0); }
		public TerminalNode FI() { return getToken(ExprParser.FI, 0); }
		public TerminalNode ELSE() { return getToken(ExprParser.ELSE, 0); }
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public If_then_else_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_then_else_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterIf_then_else_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitIf_then_else_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitIf_then_else_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_then_else_expressionContext if_then_else_expression() throws Exception {
		If_then_else_expressionContext _localctx = new If_then_else_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_then_else_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(IF);
			setState(72); match(LPAREN);
			setState(73); logical_or_expression();
			setState(74); match(RPAREN);
			setState(75); match(THEN);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76); ((If_then_else_expressionContext)_localctx).statement = statement();
				((If_then_else_expressionContext)_localctx).then_stmts.add(((If_then_else_expressionContext)_localctx).statement);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 10) | (1L << 13) | (1L << TRUE) | (1L << FALSE) | (1L << SEMICOL) | (1L << LPAREN) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0) );
			setState(87);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(81); match(ELSE);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(82); ((If_then_else_expressionContext)_localctx).statement = statement();
					((If_then_else_expressionContext)_localctx).else_stmts.add(((If_then_else_expressionContext)_localctx).statement);
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 10) | (1L << 13) | (1L << TRUE) | (1L << FALSE) | (1L << SEMICOL) | (1L << LPAREN) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0) );
				}
			}

			setState(89); match(FI);
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_then_else_expression_compatibleContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public StatementContext statement;
		public List<StatementContext> then_stmts = new ArrayList<StatementContext>();
		public List<StatementContext> else_stmts = new ArrayList<StatementContext>();
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode IF() { return getToken(ExprParser.IF, 0); }
		public TerminalNode ELSE() { return getToken(ExprParser.ELSE, 0); }
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public If_then_else_expression_compatibleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_then_else_expression_compatible; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterIf_then_else_expression_compatible(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitIf_then_else_expression_compatible(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitIf_then_else_expression_compatible(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_then_else_expression_compatibleContext if_then_else_expression_compatible() throws Exception {
		If_then_else_expression_compatibleContext _localctx = new If_then_else_expression_compatibleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_then_else_expression_compatible);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(IF);
			setState(92); match(LPAREN);
			setState(93); logical_or_expression();
			setState(94); match(RPAREN);
			setState(104);
			switch (_input.LA(1)) {
			case 8:
				{
				setState(95); match(8);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(96); ((If_then_else_expression_compatibleContext)_localctx).statement = statement();
					((If_then_else_expression_compatibleContext)_localctx).then_stmts.add(((If_then_else_expression_compatibleContext)_localctx).statement);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 10) | (1L << 13) | (1L << TRUE) | (1L << FALSE) | (1L << SEMICOL) | (1L << LPAREN) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0) );
				setState(101); match(11);
				}
				break;
			case 5:
			case 10:
			case 13:
			case TRUE:
			case FALSE:
			case SEMICOL:
			case LPAREN:
			case IF:
			case ID:
			case INT:
			case STRING:
				{
				setState(103); ((If_then_else_expression_compatibleContext)_localctx).statement = statement();
				((If_then_else_expression_compatibleContext)_localctx).then_stmts.add(((If_then_else_expression_compatibleContext)_localctx).statement);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(106); match(ELSE);
				setState(116);
				switch (_input.LA(1)) {
				case 8:
					{
					setState(107); match(8);
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(108); ((If_then_else_expression_compatibleContext)_localctx).statement = statement();
						((If_then_else_expression_compatibleContext)_localctx).else_stmts.add(((If_then_else_expression_compatibleContext)_localctx).statement);
						}
						}
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 10) | (1L << 13) | (1L << TRUE) | (1L << FALSE) | (1L << SEMICOL) | (1L << LPAREN) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << STRING))) != 0) );
					setState(113); match(11);
					}
					break;
				case 5:
				case 10:
				case 13:
				case TRUE:
				case FALSE:
				case SEMICOL:
				case LPAREN:
				case IF:
				case ID:
				case INT:
				case STRING:
					{
					setState(115); ((If_then_else_expression_compatibleContext)_localctx).statement = statement();
					((If_then_else_expression_compatibleContext)_localctx).else_stmts.add(((If_then_else_expression_compatibleContext)_localctx).statement);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_expressionContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public Postfix_expressionContext postfix_expression() {
			return getRuleContext(Postfix_expressionContext.class,0);
		}
		public Assignment_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterAssignment_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitAssignment_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitAssignment_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_expressionContext assignment_expression() throws Exception {
		Assignment_expressionContext _localctx = new Assignment_expressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); postfix_expression();
			setState(121); match(7);
			setState(122); logical_or_expression();
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_or_expressionContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public List<Logical_and_expressionContext> logical_and_expression() {
			return getRuleContexts(Logical_and_expressionContext.class);
		}
		public List<TerminalNode> OR_OP() { return getTokens(ExprParser.OR_OP); }
		public Logical_and_expressionContext logical_and_expression(int i) {
			return getRuleContext(Logical_and_expressionContext.class,i);
		}
		public TerminalNode OR_OP(int i) {
			return getToken(ExprParser.OR_OP, i);
		}
		public Logical_or_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_or_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterLogical_or_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitLogical_or_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitLogical_or_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_or_expressionContext logical_or_expression() throws Exception {
		Logical_or_expressionContext _localctx = new Logical_or_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logical_or_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); logical_and_expression();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR_OP) {
				{
				{
				setState(125); match(OR_OP);
				setState(126); logical_and_expression();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_and_expressionContext extends ParserRuleContext {
		public String tag;
		public Object value;
		public List<Inclusive_or_expressionContext> inclusive_or_expression() {
			return getRuleContexts(Inclusive_or_expressionContext.class);
		}
		public TerminalNode AND_OP(int i) {
			return getToken(ExprParser.AND_OP, i);
		}
		public List<TerminalNode> AND_OP() { return getTokens(ExprParser.AND_OP); }
		public Inclusive_or_expressionContext inclusive_or_expression(int i) {
			return getRuleContext(Inclusive_or_expressionContext.class,i);
		}
		public Logical_and_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_and_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterLogical_and_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitLogical_and_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitLogical_and_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_and_expressionContext logical_and_expression() throws Exception {
		Logical_and_expressionContext _localctx = new Logical_and_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logical_and_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); inclusive_or_expression();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND_OP) {
				{
				{
				setState(133); match(AND_OP);
				setState(134); inclusive_or_expression();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (Exception e) {
			 throw e;
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
